--- a/COP.html
+++ b/COP.html
@@ -43,6 +43,7 @@
           <li><a href="./cours.html" title="">04 : Formation Académique</a></li>
           <!--<li><a href="./Albums.html" title="">05 : Photos</a></li>-->
           <li><a href="./contact.html" title="">05 : Contact</a></li>
+          <li><a href="./COP_en.html" title="">English version</a></li>
         </ul>
 
 
