--- a/COP_en.html
+++ b/COP_en.html
@@ -37,13 +37,13 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
-          <li><a href="./index.html" title="">01 : Accueil</a></li>
-          <li><a href="./about.html" title="">02 : A propos</a></li>
-          <li><a href="./works.html" title="">03 : Travaux</a></li>
-          <li><a href="./cours.html" title="">04 : Formation Académique</a></li>
-          <!--<li><a href="./Albums.html" title="">05 : Photos</a></li>-->
-          <li><a href="./contact.html" title="">05 : Contact</a></li>
-          <li><a href="./cale_en.html" title="">English version</a></li>
+          <li><a href="./index_en.html" title=""><p style="color:black;">01 : Home</p></a></li>
+          <li><a href="./about_en.html" title=""><p style="color:black;">02 : About</p></a></li>
+          <li><a href="./works_en.html" title=""><p style="color:black;">03 : Works</p></a></li>
+          <li><a href="./cours_en.html" title=""><p style="color:black;">04 : Academic Training</p></a></li>
+          <!--<li><a href="./Albums.html" title=""><p style="color:black;">05 : Photos</p></a></li>-->
+          <li><a href="./contact_en.html" title=""><p style="color:black;">05 : Contact</p></a></li>
+          <li><a href="./COP.html" title=""><p style="color:black;">Version Française</p></a></li>
         </ul>
 
 
@@ -65,11 +65,11 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <img src="./assets/images/cover bfc f.jpg" class="img-responsive" alt="">
+        <img src="./assets/images/cop_ecole_flat.jpeg" class="img-responsive" alt="">
         <div class="card-container">
           <div class="text-center">
-            <h1 class="h2">Etude de l'effet Leindenfrost</h1>
-            <p align="center">Travaux réalisés dans le cadre du TIPE 2017. Dans certaines conditions (température élevée et fort confinement de la goutte), la goutte en caléfaction se met spontanément à osciller à haute fréquence (~10 Hz) sous forme d'étoile ayant entre 2 et 10 branches. Nous avons pu proposer un modèle pour rendre compte de ce phénomène et obtenu le champ de vitesse dans la goutte.</p>
+            <h1 class="h2">Accredited Observer at COP 27</h1>
+            <p align="center">The ENS gave me the opportunity to go to COP 27 in November 2022 in Sharm-El-Sheik on the southern tip of Sinai. I had access to almost all of the blue zone, the diplomatic area where the negotiations take place. This trip deeply marked me with the nature of the event and the meetings I made. Career choice is an important element. I think scientists have a responsibility to contribute, a role to play and real added value to bring to these issues. I brought a camera with me to take pictures and record some of my meetings. We were invited to talk about our presence at COP 27 at the French School in Sharm-El_Sheik. Finally, we were able to interact with various journalists, resulting in the publication of several articles. <!--. Vous pouvez en consulter quelques uns : <br>https://www.ladepeche.fr/2022/11/10/adrien-etudiant-a-lens-et-observateur-de-la-cop27-pour-le-moment-cest-beaucoup-de-brassage-de-vent-10795287.php<br>https://www.bfmtv.com/replay-emissions/premiere-edition-6h-8h30/</p> -->
           </div>
 
           <!--<blockquote>
@@ -84,18 +84,32 @@
       <div class="col-md-8 col-md-offset-2 section-container-spacer">
         <div class="row">
           <div class="col-xs-12 col-md-6">
-            <img src="./assets/images/simulation du mode 5.gif" class="img-responsive" alt="">
-            <p>Modèle d'oscillation de la goutte</p>
+            <img src="./assets/images/cop_libe_carre.jpeg" class="img-responsive" alt="">
+            <p>Tribune published in Libération by the COP-ENS delegation</p>
           </div>
           <div class="col-xs-12 col-md-6">
-            <img src="./assets/images/cale.gif" class="img-responsive" alt="" style="width:370px;height:370px;">
-            <p>Observation</p>
+            <img src="./assets/images/cop_ad_eg_carre.jpeg" class="img-responsive" > <!-- alt="" style="width:370px;height:370px;"> -->
+            <p>The meetings were mostly random</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-8 col-md-offset-2 section-container-spacer">
+        <div class="row">
+          <div class="col-xs-12 col-md-6">
+            <img src="./assets/images/cop_train_carre.jpeg" class="img-responsive" alt="">
+            <p>The trip was done by train as much as possible</p>
+          </div>
+          <div class="col-xs-12 col-md-6">
+            <img src="./assets/images/cop_pleniere_carre.jpeg" class="img-responsive"> <!-- alt="" style="width:370px;height:370px;"> -->
+            <p>Plenary room where decisions are announced</p>
           </div>
         </div>
       </div>
 
       <div class="col-xs-12">
-        <img src="./assets/images/cale f.jpg" class="img-responsive" alt="">
+        <img src="./assets/images/cop_doc.png" class="img-responsive" alt="">
+        <p>Screenshot of the documentary</p>
       </div>
 
     </div>
