--- a/about_en.html
+++ b/about_en.html
@@ -37,13 +37,13 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
-          <li><a href="./index.html" title="">01 : Accueil</a></li>
-          <li><a href="./about.html" title="">02 : A propos</a></li>
-          <li><a href="./works.html" title="">03 : Travaux</a></li>
-          <li><a href="./cours.html" title="">04 : Formation Académique</a></li>
-          <!--<li><a href="./Albums.html" title="">05 : Photos</a></li>-->
-          <li><a href="./contact.html" title="">05 : Contact</a></li>
-          <li><a href="./about_en.html" title="">English version</a></li>
+          <li><a href="./index_en.html" title=""><p style="color:black;">01 : Home</p></a></li>
+          <li><a href="./about_en.html" title=""><p style="color:black;">02 : About</p></a></li>
+          <li><a href="./works_en.html" title=""><p style="color:black;">03 : Works</p></a></li>
+          <li><a href="./cours_en.html" title=""><p style="color:black;">04 : Academic Training</p></a></li>
+          <!--<li><a href="./Albums.html" title=""><p style="color:black;">05 : Photos</p></a></li>-->
+          <li><a href="./contact_en.html" title=""><p style="color:black;">05 : Contact</p></a></li>
+          <li><a href="./about.html" title=""><p style="color:black;">Version Française</p></a></li>
         </ul>
 
 
@@ -64,14 +64,14 @@
             <div class="col-md-15 col-md-offset-1">
               <div class="row">
                 <div class="col-xs-12 col-md-6">
-                  <p align="center"><a href="CV_Fr.pdf" class="btn btn-primary btn-lg">Télécharger mon CV</a></p>
+                  <p align="center"><a href="CV_en.pdf" class="btn btn-primary btn-lg">Download my CV</a></p>
                   <br>
-                  <h3>Présentation</h3>
-                  <p>Je m'appelle Adrien Fauste-Gay, je suis normalien étudiant en quatrième année à l'École Normale Supérieure de la rue d'Ulm. Je suis rattaché au département de Physique et je prépare cette année mon Master 2 en Bio-Physique. Ce Master forme à la modélisation et à l'étude des systèmes vivants, très riches et complexes dans leurs comportements. Cela amène à étudier des matières aussi diverses que la physique statistique, la dynamique des populations ou l'analyse de systèmes complexes par exemple. 
+                  <h3>Introduction</h3>
+                  <p>My name is Adrien Fauste-Gay, I am a student in my fourth year at École Normale Supérieure in Paris. I am affiliated with the Physics department and I am currently preparing for my Master's degree in Bio-Physics. This program focuses on modeling and studying living systems, which are very rich and complex in their behaviors. This leads to studying various subjects such as statistical physics, population dynamics, and complex systems analysis.
                   <br>
-                  Je profite par ailleurs de l’environnement hautement pluridisciplinaire de l’ENS pour étudier d’autres sujets : histoire, économie, informatique... J'ai notamment suivi un grand nombre de cours au département "Environnement et Société" qui traite des questions écologiques avec un prisme pluridisciplinaire (scientifique, juridique, philosophique...).</p>
-                  <h3>Projets</h3>
-                  <p>Je pense que notre rapport à la Nature doit être questionné. Nous arrivons aujourd'hui à la limite d'un modèle de production et de répartition des richesses. Si nous ne voulons pas vivre sans retour possible dans un monde instable, autant sur le plan climatique que social, il faut entamer dès aujourd'hui une transition. De par ma formation, j'ai longtemps pensé travailler dans la recherche sur des sujets liés au climat ou sur des sujets plus fondamentaux. Mais en novembre dernier, j'ai eu la chance d'être envoyé par l'ENS en observateur à la COP 27. Ce voyage m'a profondément marqué par la nature de l'évènement et des rencontres que j'ai faites. Le choix de carrière est un élément important. Je pense que les scientifiques ont la responsabilité de contribuer, un rôle à jouer et une vraie plus value à apporter sur ces questions.</p>
+                  I also take advantage of the highly interdisciplinary environment of ENS to study other subjects such as history, economics, and computer science. I have taken many courses in the "Environment and Society" department which deals with ecological issues from a multidisciplinary perspective (scientific, legal, philosophical, etc.).</p>
+                  <h3>Projects</h3>
+                  <p>I believe that our relationship with nature must be questioned. We are now reaching the limit of a model of production and distribution of wealth. If we do not want to live in an unstable world, both climatically and socially, we must begin the transition today. Because of my training, I have long thought of working in research on climate-related or more fundamental subjects. But last November, I had the opportunity to be sent by ENS as an observer to COP 27. This trip deeply affected me because of the nature of the event and the people I met. The choice of career is an important element. I think that scientists have a responsibility to contribute, a role to play and real added value to bring to these questions.</p>
                   <!--<h3>Personalité et centres d'interêts</h3>
                   <p>
                   Je travaille principalement sur les systèmes dynamiques complexes et en particulier l'emergence de phénomènes d'ensembles non linéaires à partir d'éléments pourtant simples. On retrouve ces mécanismes en Biologie (écologie), Physique (transition de phase), Informatique (algorithmes des réseaux).</p>-->
