--- a/cale_en.html
+++ b/cale_en.html
@@ -37,13 +37,13 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
-          <li><a href="./index.html" title="">01 : Accueil</a></li>
-          <li><a href="./about.html" title="">02 : A propos</a></li>
-          <li><a href="./works.html" title="">03 : Travaux</a></li>
-          <li><a href="./cours.html" title="">04 : Formation Académique</a></li>
-          <!--<li><a href="./Albums.html" title="">05 : Photos</a></li>-->
-          <li><a href="./contact.html" title="">05 : Contact</a></li>
-          <li><a href="./cale_en.html" title="">English version</a></li>
+          <li><a href="./index_en.html" title=""><p style="color:black;">01 : Home</p></a></li>
+          <li><a href="./about_en.html" title=""><p style="color:black;">02 : About</p></a></li>
+          <li><a href="./works_en.html" title=""><p style="color:black;">03 : Works</p></a></li>
+          <li><a href="./cours_en.html" title=""><p style="color:black;">04 : Academic Training</p></a></li>
+          <!--<li><a href="./Albums.html" title=""><p style="color:black;">05 : Photos</p></a></li>-->
+          <li><a href="./contact_en.html" title=""><p style="color:black;">05 : Contact</p></a></li>
+          <li><a href="./cale.html" title=""><p style="color:black;">Version Française</p></a></li>
         </ul>
 
 
@@ -68,8 +68,8 @@
         <img src="./assets/images/cover bfc f.jpg" class="img-responsive" alt="">
         <div class="card-container">
           <div class="text-center">
-            <h1 class="h2">Etude de l'effet Leindenfrost</h1>
-            <p align="center">Travaux réalisés dans le cadre du TIPE 2017. Dans certaines conditions (température élevée et fort confinement de la goutte), la goutte en caléfaction se met spontanément à osciller à haute fréquence (~10 Hz) sous forme d'étoile ayant entre 2 et 10 branches. Nous avons pu proposer un modèle pour rendre compte de ce phénomène et obtenu le champ de vitesse dans la goutte.</p>
+            <h1 class="h2">Study of the Leidenfrost effect</h1>
+            <p align="center">Work carried out as part of TIPE 2017. Under certain conditions (high temperature and strong confinement of the droplet), the droplet in heating spontaneously starts to oscillate at high frequency (~10 Hz) in the form of a star with 2 to 10 branches. We were able to propose a model to account for this phenomenon and obtain the velocity field in the droplet.</p>
           </div>
 
           <!--<blockquote>
@@ -85,7 +85,7 @@
         <div class="row">
           <div class="col-xs-12 col-md-6">
             <img src="./assets/images/simulation du mode 5.gif" class="img-responsive" alt="">
-            <p>Modèle d'oscillation de la goutte</p>
+            <p>Droplet oscillation model</p>
           </div>
           <div class="col-xs-12 col-md-6">
             <img src="./assets/images/cale.gif" class="img-responsive" alt="" style="width:370px;height:370px;">
