--- a/works_en.html
+++ b/works_en.html
@@ -37,13 +37,13 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
-          <li><a href="./index.html" title=""><p style="color:black;">01 : Accueil</p></a></li>
-          <li><a href="./about.html" title=""><p style="color:black;">02 : A propos</p></a></li>
-          <li><a href="./works.html" title=""><p style="color:black;">03 : Travaux</p></a></li>
-          <li><a href="./cours.html" title=""><p style="color:black;">04 : Formation Académique</p></a></li>
+          <li><a href="./index_en.html" title=""><p style="color:black;">01 : Home</p></a></li>
+          <li><a href="./about_en.html" title=""><p style="color:black;">02 : About</p></a></li>
+          <li><a href="./works_en.html" title=""><p style="color:black;">03 : Works</p></a></li>
+          <li><a href="./cours_en.html" title=""><p style="color:black;">04 : Academic Training</p></a></li>
           <!--<li><a href="./Albums.html" title=""><p style="color:black;">05 : Photos</p></a></li>-->
-          <li><a href="./contact.html" title=""><p style="color:black;">05 : Contact</p></a></li>
-          <li><a href="./works_en.html" title=""><p style="color:black;">English Version</p></a></li>
+          <li><a href="./contact_en.html" title=""><p style="color:black;">05 : Contact</p></a></li>
+          <li><a href="./works.html" title=""><p style="color:black;">Version Française</p></a></li>
         </ul>
 
 
@@ -58,8 +58,8 @@
       
       <div class="col-sm-8 col-sm-offset-2 section-container-spacer">
         <div class="text-center">
-          <h1 class="h2">Travaux</h1>
-          <p><h3>Présentation des divers travaux et projets réalisés ces dernières années</h3></p>
+          <h1 class="h2">Projects</h1>
+          <p><h3>Presentation of various works and projects completed in recent years</h3></p>
         </div>
       </div>
 
@@ -74,36 +74,36 @@
 
 
                     <div class="col-sm-4">
-                      <a href="./COP.html" title="" class="black-image-project-hover">
+                      <a href="./COP_en.html" title="" class="black-image-project-hover">
                         <img src="./assets/images/COP_carre.jpeg" alt="" class="img-responsive">
                       </a>
                     <div class="card-container card-container-lg">
-                        <h4>Sharm-El-Sheik, Egypte</h4>
-                        <h3>Observateur à la COP 27</h3>
-                        <p>Observateur accrédité par l'ONU et l'ENS et réalisation d'un documentaire sur nos regards vers l'avenir.</p>
-                        <a href="./COP.html" title="" class="btn btn-default">En savoir plus</a>
+                        <h4>Sharm-El-Sheik, Egypt</h4>
+                    <h3>Observer at COP 27</h3>
+                    <p>Accredited observer by the UN and ENS and realization of a documentary on our views towards the future.</p>
+                    <a href="./COP_en.html" title="" class="btn btn-default">Learn more</a>
                       </div>
                     </div>
                     <div class="col-sm-4">
-                      <a href="./JFA.html" title="" class="black-image-project-hover">
+                      <a href="./JFA_en.html" title="" class="black-image-project-hover">
                         <img src="./assets/images/JFA1.jpeg" alt="" class="img-responsive">
                       </a>
                     <div class="card-container card-container-lg">
-                        <h4>Laboratoire de Physique de l'ENS</h4>
-                        <h3>Manipulation de molécules uniques par pince magnétique</h3>
-                        <p>Analyse de l'influence de molécules de la famille des flavoïdes sur la stabilité de complexes formé sur de l'ADN.</p>
-                        <a href="./JFA.html" title="" class="btn btn-default">En savoir plus</a>
+                        <h4>Physics Laboratory of ENS</h4>
+                        <h3>Manipulation of Unique Molecules by Magnetic Tweezers</h3>
+                        <p>Analysis of the influence of flavoid molecules on the stability of complexes formed on DNA.</p>
+                        <a href="./JFA_en.html" title="" class="btn btn-default">Learn more</a>
                       </div>
                     </div>
                     <div class="col-sm-4">
-                      <a href="./M1.html" title="" class="black-image-project-hover">
+                      <a href="./M1_en.html" title="" class="black-image-project-hover">
                         <img src="./assets/images/suivi.PNG" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
-                        <h4>Université de Tokyo</h4>
-                        <h3>Calcul par système dynamique d'ADN</h3>
-                        <p>Travaux réalisés dans le cadre de mon stage de M1 sur des écosystèmes dynamiques Proies-Prédateurs d’ADN pour faire du calcul de réservoir.</p>
-                        <a href="./M1.html" title="" class="btn btn-default">En savoir plus</a>
+                        <h4>University of Tokyo</h4>
+                        <h3>Dynamic DNA System Calculation</h3>
+                        <p>Work done during my M1 internship on dynamic prey-predator DNA ecosystems for reservoir computing.</p>
+                        <a href="./M1_en.html" title="" class="btn btn-default">Learn more</a>
                       </div>
                     </div>
                       
@@ -114,36 +114,36 @@
             <div class="item">
                 <div class="row">
                   <div class="col-sm-4">
-                      <a href="./Bottle.html" title="" class="black-image-project-hover">
+                      <a href="./Bottle_en.html" title="" class="black-image-project-hover">
                         <img src="./assets/images/R=0.25.jpg" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>TIPE 2018</h4>
-                        <h3>Etude du Bottle Flip Challenge</h3>
-                        <p>Analyse par divers moyens de la physique derrière ce défi populaire.</p>
-                        <a href="./Bottle.html" title="" class="btn btn-default">En savoir plus</a>
+                        <h3>Study of the Bottle Flip Challenge</h3>
+                        <p>Analysis by various means of the physics behind this popular challenge.</p>
+                        <a href="./Bottle_en.html" title="" class="btn btn-default">Learn more</a>
                       </div>
                     </div>
                     <div class="col-sm-4">
-                      <a href="./cale.html" title="" class="black-image-project-hover">
+                      <a href="./cale_en.html" title="" class="black-image-project-hover">
                         <img src="./assets/images/cover bfc r.jpg" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>TIPE 2017</h4>
-                        <h3>Etude de l'Effet Leindenfrost</h3>
-                        <p>Etude principalement centrée sur l'étude des oscillation en étoile apparaissant spontanément sous certaines conditions.</p>
-                        <a href="./cale.html" title="" class="btn btn-default">En savoir plus</a>
+                        <h3>Study of the Leidenfrost Effect</h3>
+                        <p>Study mainly focused on the study of star-shaped oscillations appearing spontaneously under certain conditions.</p>
+                        <a href="./cale_en.html" title="" class="btn btn-default">Learn more</a>
                       </div>
                     </div> 
                   <div class="col-sm-4">
-                      <a href="./L3.html" title="" class="black-image-project-hover">
+                      <a href="./L3_en.html" title="" class="black-image-project-hover">
                         <img src="./assets/images/cover L3.jpg" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
-                        <h4>Stage L3</h4>
-                        <h3>Instrumentation de colonnes de sols</h3>
-                        <p>Conception d'un système d'enregistrement en continu pour un nouveau type de colonne de sol à l'Ecotron d'Ile de France en juillet 2020</p>
-                        <a href="./L3.html" title="" class="btn btn-default">En savoir plus</a>
+                        <h4>L3 Internship</h4>
+                        <h3>Instrumentation of soil columns</h3>
+                        <p>Design of a continuous recording system for a new type of soil column at the Ecotron of Ile de France in July 2020</p>
+                        <a href="./L3_en.html" title="" class="btn btn-default">Learn more</a>
                       </div>
                     </div>
                    <!--<div class="col-sm-4">
