--- a/Bottle_en.html
+++ b/Bottle_en.html
@@ -37,13 +37,13 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
-          <li><a href="./index.html" title="">01 : Accueil</a></li>
-          <li><a href="./about.html" title="">02 : A propos</a></li>
-          <li><a href="./works.html" title="">03 : Travaux</a></li>
-          <li><a href="./cours.html" title="">04 : Formation Académique</a></li>
-          <!--<li><a href="./Albums.html" title="">05 : Photos</a></li>-->
-          <li><a href="./contact.html" title="">05 : Contact</a></li>
-          <li><a href="./cale_en.html" title="">English version</a></li>
+          <li><a href="./index_en.html" title=""><p style="color:black;">01 : Home</p></a></li>
+          <li><a href="./about_en.html" title=""><p style="color:black;">02 : About</p></a></li>
+          <li><a href="./works_en.html" title=""><p style="color:black;">03 : Works</p></a></li>
+          <li><a href="./cours_en.html" title=""><p style="color:black;">04 : Academic Training</p></a></li>
+          <!--<li><a href="./Albums.html" title=""><p style="color:black;">05 : Photos</p></a></li>-->
+          <li><a href="./contact_en.html" title=""><p style="color:black;">05 : Contact</p></a></li>
+          <li><a href="./Bottle.html" title=""><p style="color:black;">Version Française</p></a></li>
         </ul>
 
 
@@ -65,11 +65,15 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <img src="./assets/images/cover bfc f.jpg" class="img-responsive" alt="">
+        <img src="./assets/images/R= 1.PNG" class="img-responsive" alt="">
         <div class="card-container">
           <div class="text-center">
-            <h1 class="h2">Etude de l'effet Leindenfrost</h1>
-            <p align="center">Travaux réalisés dans le cadre du TIPE 2017. Dans certaines conditions (température élevée et fort confinement de la goutte), la goutte en caléfaction se met spontanément à osciller à haute fréquence (~10 Hz) sous forme d'étoile ayant entre 2 et 10 branches. Nous avons pu proposer un modèle pour rendre compte de ce phénomène et obtenu le champ de vitesse dans la goutte.</p>
+            <h1 class="h2">Study of the Bottle Flip Challenge</h1>
+            <h3> Or how to slow down an object without applying force </h3>
+            <p>Study conducted as part of the TIPE 2018 (supervised scientific work in preparatory class). The study focused on the hidden physics behind the Bottle Flip Challenge, a simple game played with a water bottle. The study is delicate because it is mainly phenomenological (measurements and numerical simulations) but it is impossible to simply model the water movements in the bottle. This work was the subject of an article in the Bulletin de l'Union des Physciens.
+            <br>
+            The work done as part of this TIPE was published in the Bulletin of the Union of Physicists.</p>
+            <p><a href="publication BUP.pdf" class="btn btn-primary btn-lg">Download the article (in French)</a></p> 
           </div>
 
           <!--<blockquote>
@@ -81,22 +85,19 @@
 
       
       
-      <div class="col-md-8 col-md-offset-2 section-container-spacer">
         <div class="row">
-          <div class="col-xs-12 col-md-6">
-            <img src="./assets/images/simulation du mode 5.gif" class="img-responsive" alt="">
-            <p>Modèle d'oscillation de la goutte</p>
-          </div>
-          <div class="col-xs-12 col-md-6">
-            <img src="./assets/images/cale.gif" class="img-responsive" alt="" style="width:370px;height:370px;">
-            <p>Observation</p>
-          </div>
+            <img src="./assets/images/bottle 1.jpg" class="img-responsive" alt="">
+            <p align='center'>Angular velocity evolution for different fill levels</p>
+        </div>
+        <div class="row">
+            <img src="./assets/images/bottle 2.jpg" class="img-responsive" alt="">
+            <p align='center'>Chronophotography of a throw</p>
         </div>
       </div>
 
-      <div class="col-xs-12">
-        <img src="./assets/images/cale f.jpg" class="img-responsive" alt="">
-      </div>
+      <!--<div class="col-xs-12">
+        <img src="./assets/images/work001-04.jpg" class="img-responsive" alt="">
+      </div>-->
 
     </div>
   </div>
