--- a/L3.html
+++ b/L3.html
@@ -37,12 +37,13 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
-          <li><a href="./index.html" title="">01 : Accueil</a></li>
-          <li><a href="./about.html" title="">02 : A propos</a></li>
-          <li><a href="./works.html" title="">03 : Travaux</a></li>
-          <li><a href="./cours.html" title="">04 : Formation Académique</a></li>
-          <!--<li><a href="./Albums.html" title="">05 : Photos</a></li>-->
-          <li><a href="./contact.html" title="">05 : Contact</a></li>
+          <li><a href="./index.html" title=""><p style="color:black;">01 : Accueil</p></a></li>
+          <li><a href="./about.html" title=""><p style="color:black;">02 : A propos</p></a></li>
+          <li><a href="./works.html" title=""><p style="color:black;">03 : Travaux</p></a></li>
+          <li><a href="./cours.html" title=""><p style="color:black;">04 : Formation Académique</p></a></li>
+          <!--<li><a href="./Albums.html" title=""><p style="color:black;">05 : Photos</p></a></li>-->
+          <li><a href="./contact.html" title=""><p style="color:black;">05 : Contact</p></a></li>
+          <li><a href="./L3_en.html" title=""><p style="color:black;">English Version</p></a></li>
         </ul>
 
 
