--- a/L3_en.html
+++ b/L3_en.html
@@ -37,24 +37,14 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
-          <li><a href="./index.html" title="">01 : Accueil</a></li>
-          <li><a href="./about.html" title="">02 : A propos</a></li>
-          <li><a href="./works.html" title="">03 : Travaux</a></li>
-          <li><a href="./cours.html" title="">04 : Formation Académique</a></li>
-          <!--<li><a href="./Albums.html" title="">05 : Photos</a></li>-->
-          <li><a href="./contact.html" title="">05 : Contact</a></li>
-          <li><a href="./cale_en.html" title="">English version</a></li>
+          <li><a href="./index_en.html" title=""><p style="color:black;">01 : Home</p></a></li>
+          <li><a href="./about_en.html" title=""><p style="color:black;">02 : About</p></a></li>
+          <li><a href="./works_en.html" title=""><p style="color:black;">03 : Works</p></a></li>
+          <li><a href="./cours_en.html" title=""><p style="color:black;">04 : Academic Training</p></a></li>
+          <!--<li><a href="./Albums.html" title=""><p style="color:black;">05 : Photos</p></a></li>-->
+          <li><a href="./contact_en.html" title=""><p style="color:black;">05 : Contact</p></a></li>
+          <li><a href="./L3.html" title=""><p style="color:black;">Version Française</p></a></li>
         </ul>
-
-
-          <!--<ul class="nav navbar-nav navbar-right navbar-small visible-md visible-lg">
-            <li><a href="./index.html" title="" class="active">001</a></li>
-            <li><a href="./index.html" title="">002</a></li>
-            <li><a href="./index.html" title="">003</a></li>
-            <li><a href="./index.html" title="">004</a></li>
-            <li><a href="./index.html" title="">005</a></li>
-            <li><a href="./index.html" title="">006</a></li>
-          </ul>-->
 
 
       </div> 
@@ -65,17 +55,12 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <img src="./assets/images/cover bfc f.jpg" class="img-responsive" alt="">
+        <img src="./assets/images/L3.jpg" class="img-responsive" alt="">
         <div class="card-container">
           <div class="text-center">
-            <h1 class="h2">Etude de l'effet Leindenfrost</h1>
-            <p align="center">Travaux réalisés dans le cadre du TIPE 2017. Dans certaines conditions (température élevée et fort confinement de la goutte), la goutte en caléfaction se met spontanément à osciller à haute fréquence (~10 Hz) sous forme d'étoile ayant entre 2 et 10 branches. Nous avons pu proposer un modèle pour rendre compte de ce phénomène et obtenu le champ de vitesse dans la goutte.</p>
+            <h1 class="h2">Instrumentation of new soil columns</h1>
+            <p>Work carried out as part of my L3 internship. ENS has a laboratory called Ecotron located near Nemours, France. This laboratory is able to simulate various natural environments to study the influence of environmental stress on various animals and plants. I developed a system to automatically monitor the water and CO2 levels in various places of soil columns over several days.
           </div>
-
-          <!--<blockquote>
-            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante."</p>
-            <small class="pull-right">Irina Martin</small>
-          </blockquote>-->
         </div>
       </div>
 
@@ -84,18 +69,20 @@
       <div class="col-md-8 col-md-offset-2 section-container-spacer">
         <div class="row">
           <div class="col-xs-12 col-md-6">
-            <img src="./assets/images/simulation du mode 5.gif" class="img-responsive" alt="">
-            <p>Modèle d'oscillation de la goutte</p>
+            <img src="./assets/images/20200710_092834.jpg" class="img-responsive" alt="">
+            <p>Instruments inside a column</p>
           </div>
           <div class="col-xs-12 col-md-6">
-            <img src="./assets/images/cale.gif" class="img-responsive" alt="" style="width:370px;height:370px;">
-            <p>Observation</p>
+            <img src="./assets/images/syst.jpg" class="img-responsive" alt="">
+            <p>Recording system</p>
           </div>
         </div>
       </div>
 
       <div class="col-xs-12">
-        <img src="./assets/images/cale f.jpg" class="img-responsive" alt="">
+        <center>
+          <img src="./assets/images/pregif1.gif" class="img-responsive" alt="" style="width:750px;">
+        </center>
       </div>
 
     </div>
