--- a/M1_en.html
+++ b/M1_en.html
@@ -37,13 +37,13 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
-          <li><a href="./index.html" title="">01 : Accueil</a></li>
-          <li><a href="./about.html" title="">02 : A propos</a></li>
-          <li><a href="./works.html" title="">03 : Travaux</a></li>
-          <li><a href="./cours.html" title="">04 : Formation Académique</a></li>
-          <!--<li><a href="./Albums.html" title="">05 : Photos</a></li>-->
-          <li><a href="./contact.html" title="">05 : Contact</a></li>
-          <li><a href="./cale_en.html" title="">English version</a></li>
+          <li><a href="./index_en.html" title=""><p style="color:black;">01 : Home</p></a></li>
+          <li><a href="./about_en.html" title=""><p style="color:black;">02 : About</p></a></li>
+          <li><a href="./works_en.html" title=""><p style="color:black;">03 : Works</p></a></li>
+          <li><a href="./cours_en.html" title=""><p style="color:black;">04 : Academic Training</p></a></li>
+          <!--<li><a href="./Albums.html" title=""><p style="color:black;">05 : Photos</p></a></li>-->
+          <li><a href="./contact_en.html" title=""><p style="color:black;">05 : Contact</p></a></li>
+          <li><a href="./M1.html" title=""><p style="color:black;">Version Française</p></a></li>
         </ul>
 
 
@@ -65,11 +65,15 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <img src="./assets/images/cover bfc f.jpg" class="img-responsive" alt="">
+        <center>
+          <img src="./assets/images/graph M1.PNG" class="img-responsive" alt="">
+        </center>
         <div class="card-container">
           <div class="text-center">
-            <h1 class="h2">Etude de l'effet Leindenfrost</h1>
-            <p align="center">Travaux réalisés dans le cadre du TIPE 2017. Dans certaines conditions (température élevée et fort confinement de la goutte), la goutte en caléfaction se met spontanément à osciller à haute fréquence (~10 Hz) sous forme d'étoile ayant entre 2 et 10 branches. Nous avons pu proposer un modèle pour rendre compte de ce phénomène et obtenu le champ de vitesse dans la goutte.</p>
+            <h1 class="h2">DNA Predator-Prey Ecosystem</h1>
+            <h3>In droplets for massively parallel computation</h3>
+            <p align="center"><a href="publi_M1.pdf" class="btn btn-primary btn-lg">Download the article</a></p>
+            <p>Study conducted as part of my M1 internship in partnership with the LIMMS based at the University of Tokyo. The work is based on the study of a highly nonlinear dynamic system simulating the behavior of a chemical system with DNA. The unit works on the possibility of massively parallel computation with DNA computers. This type of system could have many applications for solving combinatorial problems in biology or for health.</p>
           </div>
 
           <!--<blockquote>
@@ -84,18 +88,21 @@
       <div class="col-md-8 col-md-offset-2 section-container-spacer">
         <div class="row">
           <div class="col-xs-12 col-md-6">
-            <img src="./assets/images/simulation du mode 5.gif" class="img-responsive" alt="">
-            <p>Modèle d'oscillation de la goutte</p>
+            <img src="./assets/images/test.gif" class="img-responsive" alt="">
+            <p>Phase diagram of two variables of the system</p>
           </div>
           <div class="col-xs-12 col-md-6">
-            <img src="./assets/images/cale.gif" class="img-responsive" alt="" style="width:370px;height:370px;">
-            <p>Observation</p>
+            <img src="./assets/images/systeme.PNG" class="img-responsive" alt="">
+            <p>Dynamic system governing the chemical reactor</p>
           </div>
         </div>
       </div>
 
       <div class="col-xs-12">
-        <img src="./assets/images/cale f.jpg" class="img-responsive" alt="">
+        <img src="./assets/images/M1.PNG" class="img-responsive" alt="">
+        <center>
+          <p>Research of the oscillating zones of the system</p>
+            </center>
       </div>
 
     </div>
