--- a/contact_en.html
+++ b/contact_en.html
@@ -37,13 +37,13 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
-          <li><a href="./index.html" title="">01 : Accueil</a></li>
-          <li><a href="./about.html" title="">02 : A propos</a></li>
-          <li><a href="./works.html" title="">03 : Travaux</a></li>
-          <li><a href="./cours.html" title="">04 : Formation Académique</a></li>
-          <!--<li><a href="./Albums.html" title="">05 : Photos</a></li>-->
-          <li><a href="./contact.html" title="">05 : Contact</a></li>
-          <li><a href="./contact_en.html" title="">English version</a></li>
+          <li><a href="./index_en.html" title=""><p style="color:black;">01 : Home</p></a></li>
+          <li><a href="./about_en.html" title=""><p style="color:black;">02 : About</p></a></li>
+          <li><a href="./works_en.html" title=""><p style="color:black;">03 : Works</p></a></li>
+          <li><a href="./cours_en.html" title=""><p style="color:black;">04 : Academic Training</p></a></li>
+          <!--<li><a href="./Albums.html" title=""><p style="color:black;">05 : Photos</p></a></li>-->
+          <li><a href="./contact_en.html" title=""><p style="color:black;">05 : Contact</p></a></li>
+          <li><a href="./contact.html" title=""><p style="color:black;">Version Française</p></a></li>
         </ul>
 
 
