--- a/index_en.html
+++ b/index_en.html
@@ -37,14 +37,13 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
-          <li><a href="./index.html" title=""><p style="color:black;">01 : Accueil</p></a></li>
-          <li><a href="./about.html" title=""><p style="color:black;">02 : A propos</p></a></li>
-          <li><a href="./works.html" title=""><p style="color:black;">03 : Travaux</p></a></li>
-          <li><a href="./cours.html" title=""><p style="color:black;">04 : Formation Académique</p></a></li>
+          <li><a href="./index_en.html" title=""><p style="color:black;">01 : Home</p></a></li>
+          <li><a href="./about_en.html" title=""><p style="color:black;">02 : About</p></a></li>
+          <li><a href="./works_en.html" title=""><p style="color:black;">03 : Works</p></a></li>
+          <li><a href="./cours_en.html" title=""><p style="color:black;">04 : Academic Training</p></a></li>
           <!--<li><a href="./Albums.html" title=""><p style="color:black;">05 : Photos</p></a></li>-->
-          <li><a href="./contact.html" title=""><p style="color:black;">05 : Contact</p></a></li>
-          <li><a href="./index_en.html" title=""><p style="color:black;">English Version</p></a></li>
-          <!--<li><a href="./components.html" title="">05 : Components</a></li>-->
+          <li><a href="./contact_en.html" title=""><p style="color:black;">05 : Contact</p></a></li>
+          <li><a href="./index.html" title=""><p style="color:black;">Version Française</p></a></li>
         </ul>
 
 
@@ -61,11 +60,11 @@
             <div class="text-content">
               <h1>
                 <span id="typed-strings">
-                  <span>Bienvenue,<br>
-                  Sur la page d'Adrien Fauste-Gay</span>
-                  <span>Physique, Systèmes complexes</span>
-                  <span>Ecologie, Modélisation, Transition</span>
-                  <span>Dynamique des réseaux, Comportements collectifs</span>
+                  <span>Welcome,<br>
+                  To Adrien Fauste-Gay's page</span>
+                  <span>Physics, Complex Systems</span>
+                  <span>Ecology, Modeling, Transition</span>
+                  <span>Network Dynamics, Collective Behaviors</span>
                 </span>
                 <span id="typed"></span>
               </h1>
