--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
                   Je travaille principalement sur les systèmes dynamiques complexes et en particulier l'emergence de phénomènes d'ensembles non linéaires à partir d'éléments pourtant simples. On retrouve ces mécanismes en Biologie (écologie), Physique (transition de phase), Informatique (algorithmes des réseaux).</p>-->
                 </div>
                 <div class="col-xs-15 col-md-6">
-                  <img src="./assets/images/ID.JPG" class="img-responsive" alt="">
+                  <img src="./assets/images/ID.jpg" class="img-responsive" alt="">
                 </div>
               </div>
             </div>
